--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>CS416 - Data Visualization Assignment</title>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.8.5/d3.min.js"></script> 
 </head>
 <body>
 <h1>Hello World</h1>
