--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
 	<title>CS416 - Data Visualization Assignment</title>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.8.5/d3.min.js"></script> 
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.8.5/d3.min.js"></script>
+	<script src="https://unpkg.com/topojson-client@3"></script>
+	<script src="https://raw.githubusercontent.com/susielu/d3-annotation/master/d3-annotation.js"></script>
 </head>
 <body>
 <h1>Hello World</h1>
