--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 	<title>CS416 - Data Visualization Assignment</title>
+	<meta http-equiv='cache-control' content='no-cache'> 
+	<meta http-equiv='expires' content='0'> 
+	<meta http-equiv='pragma' content='no-cache'>
 	<script src="script/d3.min.js"></script>
 	<script src="script/topojson-client.js"></script>
 	<script src="script/d3-annotation.min.js"></script>
@@ -33,7 +36,7 @@
 				<div id="textContent"></div>
 			</td>
 			<td width="70%">
-				<div id="chartContent"></div>
+				<div id="chartContent" style="display: flex; align-items: stretch; border: 1px dotted blue;"></div>
 			</td>
 		</tr>
 	</table>
