--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 	<meta http-equiv='expires' content='0'> 
 	<meta http-equiv='pragma' content='no-cache'>
 	<script src="script/d3.min.js"></script>
-	<script src="script/topojson-client.js"></script>
 	<script src="script/d3-annotation.min.js"></script>
 </head>
 <body>
@@ -15,7 +14,10 @@
 	<h3>Aaron Barrie - CS 416 - Summer 2023</h3>
 
 	<p>
-		This narrative visualization uses data sourced from th MCU Movies Dataset available at <a href="https://www.kaggle.com/datasets/dalepeh/mcu-movies-dataset">this link</a>.
+		This narrative visualization uses data sourced from the MCU Movies Dataset available at <a href="https://www.kaggle.com/datasets/dalepeh/mcu-movies-dataset">this link</a>.
+		<br />
+		<br />
+		Please use the "Next Slide" link to advance forward through this visualization. If you wish to rewind, please use the "Previous Slide" link. To jump to a specific slide, click the link corresponding to the name of the slide in the ordered list below.
 	</p>
 
 	<p id="nextSlide"><a href="javascript:PreviousSlide();">Previous Slide</a></p>
