--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta http-equiv='pragma' content='no-cache'>
 	<script src="script/d3.min.js"></script>
 	<script src="script/d3-annotation.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="script/index.css" />
 </head>
 <body>
 	<h1>I've Had My Fill!</h1>
