--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
 	</ol>
 	<p id="previousSlide"><a href="javascript:NextSlide();">Next Slide</a></p>
 
-	<table width="100%" height="600" border="1">
+	<table width="100%" height="600">
 		<tr>
-			<td width="30%" valign="top">
+			<td width="20%" valign="top">
 				<div id="slideTitle"></div>
 				<div id="textContent"></div>
 			</td>
-			<td width="70%">
-				<div id="chartContent" style="display: flex; align-items: stretch; border: 1px dotted blue;"></div>
+			<td width="80%">
+				<div id="chartContent" style="display: flex; align-items: stretch;"></div>
 			</td>
 		</tr>
 	</table>
